// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`events e2e GET /events/:eventId facebook event fields 1`] = `
Object {
  "__v": 0,
  "createdAt": Any<String>,
  "dates": Array [
    Object {
      "from": "2019-12-11T11:16:14.157Z",
      "to": "2019-09-12T11:16:14.157Z",
    },
  ],
  "facebook": Object {
    "description": "Description",
    "goingCount": 100,
    "id": "12345678",
    "interestedCount": 1,
    "title": "Title",
  },
  "id": Any<String>,
  "images": Array [],
  "location": Object {
    "address1": "Vechtplantsoen 56",
    "address2": "1",
    "city": "Utrecht",
    "coordinates": Object {
      "latitude": 52.118273,
      "longitude": 5.085487,
    },
    "country": "NL",
    "postalCode": "3554TG",
    "type": "venue",
  },
  "organiser": Object {
    "venue": "5c001cac8e84e1067f34695c",
  },
  "tags": Array [],
  "updatedAt": Any<String>,
}
`;

exports[`events e2e GET /events/:eventId happy path 1`] = `
Object {
  "__v": 0,
  "createdAt": Any<String>,
  "dates": Array [
    Object {
      "from": "2019-12-11T11:16:14.157Z",
      "to": "2019-09-12T11:16:14.157Z",
    },
  ],
  "id": Any<String>,
  "images": Array [],
  "location": Object {
    "address1": "Vechtplantsoen 56",
    "address2": "1",
    "city": "Utrecht",
    "coordinates": Object {
      "latitude": 52.118273,
      "longitude": 5.085487,
    },
    "country": "NL",
    "postalCode": "3554TG",
    "type": "address",
  },
  "tags": Array [],
  "title": "Bevrijdingsfestival",
  "updatedAt": Any<String>,
}
`;

exports[`events e2e GET /events/:eventId simple fields 1`] = `
Object {
  "__v": 0,
  "createdAt": Any<String>,
  "dates": Array [
    Object {
      "from": "2019-12-11T11:16:14.157Z",
      "to": "2019-09-12T11:16:14.157Z",
    },
  ],
  "description": Object {
    "en": "Simple description",
  },
  "id": Any<String>,
  "images": Array [],
  "location": Object {
    "address1": "Vechtplantsoen 56",
    "address2": "1",
    "city": "Utrecht",
    "coordinates": Object {
      "latitude": 52.118273,
      "longitude": 5.085487,
    },
    "country": "NL",
    "postalCode": "3554TG",
    "type": "address",
  },
  "tags": Array [],
  "title": "Bevrijdingsfestival",
  "updatedAt": Any<String>,
}
`;

exports[`events e2e GET /events/:eventId tags fields 1`] = `
Object {
  "__v": 0,
  "createdAt": Any<String>,
  "dates": Array [
    Object {
      "from": "2019-12-11T11:16:14.157Z",
      "to": "2019-09-12T11:16:14.157Z",
    },
  ],
  "id": Any<String>,
  "images": Array [],
  "location": Object {
    "address1": "Vechtplantsoen 56",
    "address2": "1",
    "city": "Utrecht",
    "coordinates": Object {
      "latitude": 52.118273,
      "longitude": 5.085487,
    },
    "country": "NL",
    "postalCode": "3554TG",
    "type": "address",
  },
  "tags": Array [
    "foo",
  ],
  "title": "Bevrijdingsfestival",
  "updatedAt": Any<String>,
}
`;

exports[`events e2e POST /events populates venue location data 1`] = `
Object {
  "address1": "Vechtplantsoen 56",
  "city": "Utrecht",
  "coordinates": Object {
    "latitude": 52.118273,
    "longitude": 5.085487,
  },
  "country": "NL",
  "postalCode": "3554TG",
  "type": "venue",
}
`;
